--- a/roles/base-config/tasks/main.yml
+++ b/roles/base-config/tasks/main.yml
@@ -8,7 +8,20 @@
     replace: 'Defaults  !requiretty'
     backup: yes
 
-- name: enable repos
- 
-- name: install base tools and packages
+- name: remove old repos
+  file:
+   path: /etc/yum.repos.d/internal.repo
+   state: absent
 
+- name: enable repos
+  copy:
+    src: open_three-tier-app.repo
+    dest: /etc/yum.repos.d/open_three-tier-app.repo 
+
+- name: install base tools and packages
+  yum:
+    name: "{{ item }}" 
+    state: latest
+  loop:
+    - httpie
+    - python-pip
