--- a/roles/lb-tier/handlers/main.yml
+++ b/roles/lb-tier/handlers/main.yml
@@ -1,7 +1,7 @@
 ---
 
-- name: start {{ payload }}
+- name: HAproxy_restart
   service:
-    name: tomcat
-    state: started
+    name: haproxy
+    state: restarted
 
